Exchanged dummy pictures and dummy texts. Fixed diplay glitches. Fixed an issue with wrong fonts due to bootstrap overwriting style.css

--- a/style.css
+++ b/style.css
@@ -28,12 +28,11 @@ img {
     height: auto;
     display: block;
 }
-<!-- Gradient Background für die Startseite -- >
+/* Gradient Background Animation */
 .gradient-background{
   background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
-  min-height: 300px;
 }
 
 @keyframes gradient-animation {
